# bookcase

./: .envrc.example  .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: deploy.yml  static-analysis.yml
ansible/: .envrc.example  Caddyfile.j2  bookcase.caddy.j2  bookcase.service.j2  deploy.yaml  playbook.yaml  vars.yaml
bookcase/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_author_full_name.py  0003_rename_full_name_author_name.py  0004_book_is_hardcopy_owned.py  0005_book_digital_file.py
main/templates/main/: index.html  layout.html
